# resume-matcher-ai

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py  002_structured_resume_profile.py  003_hr_comment_history_and_structured_dates.py  004_candidate_status_scope.py  005_candidate_status_enum_type.py  006_requirement_qualification.py  007_add_user_and_refresh_token.py  008_requirement_active_status.py  009_create_interview_tables.py  010_candidate_notes_pref.py
backend/app/: celery_app.py  config.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  auth.py  candidates.py  matching.py  rate_limit.py  requirements.py  resume.py
backend/app/services/: ai_service.py  auth_service.py  candidate_service.py  experience_calculator.py  job_store.py  matching_service.py  requirement_service.py  resume_service.py  token_tracker.py
backend/app/tasks/: resume_tasks.py
backend/docs/: openapi.json
backend/scripts/: __init__.py  generate_openapi.py
deploy/systemd/: README.md  recruitment-backend.service  recruitment-celery.service  recruitment-frontend.service
frontend/: .env.example  .gitignore  README.md  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/signin/: layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  nav-user.tsx
frontend/src/context/: candidate-context.tsx
frontend/src/lib/: api-client.ts
(+25 files in other folders)
