[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-matcher-backend"
version = "0.1.0"
description = "FastAPI backend for resume ingestion, candidate management, and AI matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "sqlalchemy>=2.0.35,<2.1.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "openai>=1.52.0,<2.0.0",
  "sentence-transformers>=3.2.0,<5.0.0",
  "pdfplumber>=0.11.4,<1.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "argon2-cffi>=21.3.0,<23.0.0",
]

[project.scripts]
generate-docs = "scripts.generate_openapi:generate_openapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
